--- a/style/style.css
+++ b/style/style.css
@@ -352,6 +352,12 @@ h5{
   z-index: 2;
 }
 
+#exp a{
+  color: #333bdf;
+  text-decoration: none;
+  font-style: italic;
+}
+
 #experience{
   display: flex;
   flex-direction: column;
