--- a/style/style.css
+++ b/style/style.css
@@ -497,7 +497,7 @@ footer{
     display: flex;
     flex-direction: column;
   }
-  
+	
   .gauche1{
     display: flex;
     flex-direction: column;
@@ -585,6 +585,13 @@ footer{
     display: flex;
     flex-direction: column;
   }
+	
+  #nom {
+	width: 100%;
+	z-index: 100;
+	display:block;
+  	font-size: 3rem;
+ }
     
   .droite2{
     display: flex;
@@ -619,6 +626,13 @@ footer{
     justify-content: center;
     left: 0;
   }
+	
+#nom {
+	width: 100%;
+	z-index: 100;
+	display:block;
+  	font-size: 4rem;
+}
   
   .bas{
     display: flex;
