--- a/style/style.css
+++ b/style/style.css
@@ -600,6 +600,22 @@ footer{
   }
 }
 
+@media only screen and (max-width: 375px) {
+	#menu{
+	  position: fixed;
+	  background-color: #101117;
+	  z-index: 12;
+	  width: 100%;
+	  text-align: center;
+	  top: 0px;
+	  margin: 0;
+	  padding-top: 10px;
+	  transition: top 0.6s;
+	  height: 8vh;
+	}
+}
+
+
 @media only screen and (max-width: 800px) {
   #menu ul{
     padding-left: 0%;
