--- a/style/style.css
+++ b/style/style.css
@@ -539,6 +539,12 @@ footer{
     border-radius: 12px;
     left: 36vw;
   }
+	
+  .slider{
+    width: 90%;
+    position: relative;
+    margin: 0;
+  }
 }
 
 
@@ -597,6 +603,12 @@ footer{
     display: flex;
     flex-direction: column;
     width: 80vw;
+  }
+	  
+  .slider{
+    width: 98%;
+    position: relative;
+    margin: 0;
   }
 }
 
@@ -668,5 +680,11 @@ footer{
   #propos_cont img{
     width: 70vw;
     align-self: center;
+  }
+	
+ .slider{
+    width: 96%;
+    position: relative;
+    margin: 0;
   }
 }
